--- a/src/Views/Voucher.form
+++ b/src/Views/Voucher.form
@@ -51,13 +51,9 @@
         <Component class="javax.swing.JTable" name="tblKhuyenMai">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="2" rowCount="1">
-                <Column editable="true" title="M&#xe3;" type="java.lang.Object">
-                  <Data value="KM1"/>
-                </Column>
-                <Column editable="true" title="T&#xea;n ch&#x1b0;&#x1a1;ng tr&#xec;nh" type="java.lang.Object">
-                  <Data value="Khai tr&#x1b0;&#x1a1;ng"/>
-                </Column>
+              <Table columnCount="2" rowCount="0">
+                <Column editable="true" title="M&#xe3;" type="java.lang.Object"/>
+                <Column editable="true" title="T&#xea;n ch&#x1b0;&#x1a1;ng tr&#xec;nh" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
